fix adaptive, compress images

--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,7 @@
           <div class="home-scroll--circle icon_down" id="scrollDown">
           </div>
         </div>
+
       </div>
     </div>
   </div>
@@ -415,7 +416,7 @@
         <div class="contact-us__form-inputs">
           <input type="text" placeholder="Name" class="contact-us__name">
           <input type="text" placeholder="Email" class="contact-us__email">
-          <input type="text" placeholder="Phone" class="contact-us__phont">
+          <input type="text" placeholder="Phone" class="contact-us__phone">
         </div>
         <textarea> </textarea>
         <input class=button type="button" value="Submit">
